kubernetes/overlays/dev/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-cost-advisor
  namespace: dev
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: app
          image: acrrealusedevmfebl.azurecr.io/cloud-cost-advisor:20260315171656
          resources:
            requests:
              cpu: 75m
              memory: 96Mi
            limits:
              cpu: 200m
              memory: 192Mi
