kubernetes/overlays/dev/patch-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-cost-advisor
  namespace: dev
spec:
  type: LoadBalancer
